# HER-Ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  HER_CONTEXT.md  README.md  alembic.ini  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  pages.yml  test.yml
config/: agents.yaml  mcp_servers.local.yaml  mcp_servers.yaml  memory.yaml  personality.yaml  rate_limits.yaml  scheduler.yaml  telegram.yaml  twitter.yaml
dashboard/: Dockerfile  app.py  requirements.txt
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: README.md  admin-tooling.md  api-reference.md  architecture.md  configuration.md  dashboard.md  deployment.md  developer-guidelines.md  examples.md  index.md  installation.md  mcp_guide.md  operations-runbook.md  phase1_prompt.md  platform-overview.md  release-readiness.md  roadmap.md  testing-and-quality.md  testing.md  testing_playbook.md  usage.md
her/: models.py
her-core/: Dockerfile  config.py  docker-entrypoint.sh  main.py  requirements.txt  sitecustomize.py  telegram_bot.py
init-scripts/: init-db.sql
sandbox/: Dockerfile  check_pentest_tools.sh  mcp_servers.local.yaml
scripts/: hello_her.py  ollama_init.sh  run_memory_aging.py  run_reflection.py  run_telegram_bot.py  seed_memory.py
site/: 404.html  index.html  sitemap.xml
tests/: test_chat_id.py  test_integration_guards.py  test_refactor_guards.py  test_retry_logic.py  test_runtime_guards.py  test_sandbox.py  test_sequential_reasoning.py  test_smoke.py  test_timezone.py
(+176 files in other folders)
