[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "her-ai"
version = "0.1.0"
description = "HER: locally hosted AI companion foundation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "HER Team" }]
dependencies = [
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "opentelemetry-sdk>=1.24.0",
  "prometheus-client>=0.20.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "PyYAML>=6.0.1",
  "structlog>=24.1.0",
  "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["her"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
warn_unreachable = true
warn_unused_configs = true
